# neutts-fastapi

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.coolify.yml  entrypoint.sh  pyproject.toml  start.bat  start.command  start.sh
api/src/: main.py
api/src/core/: config.py  model_config.py  paths.py
api/src/inference/: model_manager.py  text_chunker.py  voice_manager.py
api/src/routers/: debug.py  health.py  model_management.py  openai_compatible.py  voice_management.py  websocket.py
api/src/services/: audio_utils.py  streaming_audio_writer.py  temp_manager.py  tts_service.py
api/src/static/: index.html
api/src/structures/: schemas.py  websocket_schemas.py
api/src/voices/builtin/: dave_neuphonic_distill-neucodec.pt  greta_neuphonic_distill-neucodec.pt  jo_neuphonic_distill-neucodec.pt
docker/cpu/: Dockerfile  docker-compose.yml
docker/gpu/: Dockerfile  docker-compose.yml
docker/scripts/: download_models.py
examples/: openai_client.py  streaming_client.py  websocket_client.py
tests/: conftest.py  test_openai_compat.py  test_streaming.py  test_voice_management.py
